# zshrs-zsh-z

./: Cargo.toml  LICENSE  README.md  znative.toml  zpm.toml
.github/workflows/: ci.yml  release.yml
docs/: index.md
src/: lib.rs
