[package]
name = "zsh_z"
version = "0.1.1"
edition = "2021"
publish = false
description = "Native zshrs plugin porting zsh-z frecency directory jumper"
authors = ["MenkeTechnologies"]
repository = "https://github.com/MenkeTechnologies/zshrs-zsh-z"
homepage = "https://github.com/MenkeTechnologies/zshrs-zsh-z"

[lib]
name = "zsh_z"
crate-type = ["cdylib", "rlib"]

[dependencies]
znative = "0.12"
